added all files

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -13,11 +13,13 @@
   --color-text: #81AFDD;
   --color-subtext: #FF8A71;
   --btn-bg: #FF4820;
+  --a-text: #71E5FF;
 }
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 .body-bg{
 
