--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+header{
+  top: 0;
+  position: fixed;
+  display: block;
+  width: 100%;
+  backdrop-filter: blur(15px);
+  background: #2460a02d;
+  border-bottom: 0.5px solid #2460a086;
+}
