--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -54,11 +54,7 @@ a.gpt3__navbar-ham-links{
     gap: 1rem;
     align-items: center;
 }
-/* hamburger */
-div.gpt3__navbar-ham{
-    backdrop-filter: blur(4px);
-    background: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.7));
-}
+
 .hamburger,
 .gpt3__navbar-ham{
     display: none;
@@ -91,12 +87,14 @@ div.gpt3__navbar-ham{
     }
     .gpt3__navbar-ham{
         display: block;
-        position: absolute;
+
+        position:absolute;
+        backdrop-filter: blur(20px);
+        background-color: #fff;
         width: 40%;
         padding: 2rem;
         right: 0;
         border-radius: 0px 0px 0px 10px;
-        /* animation: scale-in-hor-right 0.15s linear; */
     }
 
     .gpt3__navbar-ham-content-wrapper button{
@@ -124,6 +122,7 @@ div.gpt3__navbar-ham{
         justify-content: space-between;
         padding: 0;
         margin: 0 1rem;
+
     }
     .gpt3__navbar-content-wrapper button{
         display: none;
